--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -147,7 +147,7 @@
           }
           {{ data.name }}
           @if (data.gallery) {
-            &nbsp;<span class="pi pi-images" [pTooltip]="'Thing has a Gallery of ' + data.uploads.length + ' item(s)'"></span>
+            &nbsp;<span class="pi pi-images" [pTooltip]="'Thing has ' + data.uploads.length + ' attachment item(s)'"></span>
           }
         </span>
       </td>
