Add a download button for files from Edit Thing so we don't have to make them public just to access them. Also maintain window scroll position between markLoading, not JUST the table scroll position, which fixes the annoying bug of the view reverting after deleting an item far into pagination

--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.css
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.css
@@ -61,7 +61,7 @@
 
 .upload-files {
   display: grid;
-  gap: 2px;
+  gap: 20px;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   margin-bottom: 5px;
 }
@@ -96,6 +96,11 @@
   cursor: not-allowed;
   text-align: center;
   vertical-align: bottom;
+}
+
+.upload-download {
+  padding-left: 10px;
+  margin-right: -20px;
 }
 
 :host ::ng-deep .upload-item .p-chip {
