--- a/src/app/manage-thing-dialog/manage-thing-dialog.component.html
+++ b/src/app/manage-thing-dialog/manage-thing-dialog.component.html
@@ -33,8 +33,31 @@
                                 [(selectedTemplateName)]="selectedTemplateName"
                                 (selectedTemplateNameChange)="templateNameChanged($event)"
                                 (manageTemplateEvent)="handleTemplateEvent($event)"/>
+          @if (actOn.public) {
+            &nbsp;
+            <p-button (onClick)="togglePublicExpiryShow()"
+                      icon="pi pi-calendar-clock" [rounded]="true" severity="secondary"
+                      pTooltip="Optionally set an expiry date to turn the public option off"
+                      [tabindex]="-1">🌐</p-button>
+          }
         </td>
       </tr>
+      @if (actOn.public && publicExpiryShow) {
+        <tr>
+          <td class="hide-on-mobile">
+            <label htmlFor="time">Public Expiry</label>
+          </td>
+          <td>
+            in&nbsp;
+            <input pInputText [(ngModel)]="publicExpiryAmount"
+                   type="number" min="1" max="50" style="width: 80px;"
+                   onclick="this.select()"/>
+            <p-dropdown [(ngModel)]="publicExpiryType"
+                        [options]="publicExpiryTypeOptions"
+                        appendTo="body"/>
+          </td>
+        </tr>
+      }
       <tr>
         <td class="hide-on-mobile">
           <label htmlFor="time">Date</label>
@@ -118,7 +141,7 @@
                                 title="Click to remove this file">
                           {{upload.name}}
                           <p-button (onClick)="downloadUpload(upload)" [rounded]="true"
-                                    icon="pi pi-download" pTooltip="Download this file"
+                                    icon="pi pi-download" title="Download this file"
                                     class="upload-download"></p-button>
                         </p-chip>
                       }
