Added hotkey for focusing search field. Full width on mobile Thing dialog fields for easier real world use. Script for pm2. Couple more TODOs from recent testing

--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -40,7 +40,7 @@
         }
         <span class="global-search-wrap p-input-icon-left p-input-icon-right" [hidden]="things.loading"> <!-- Use hidden instead of ngIf to maintain the user text state while loading -->
           <i class="pi pi-search"></i>
-          <input #globalSearchIn pInputText (input)="globalFilterTableByEvent($event)" placeholder="Search Things" />
+          <input id="globalSearchIn" #globalSearchIn pInputText (input)="globalFilterTableByEvent($event)" placeholder="Search Things" />
           <i class="pi pi-times-circle header-tiny-button" title="Clear the search input"
              (click)="clearGlobalFilter(globalSearchIn)"></i>
         </span>
