--- a/src/app/new-account-dialog/new-account-dialog.component.html
+++ b/src/app/new-account-dialog/new-account-dialog.component.html
@@ -14,7 +14,7 @@
     </div>
     
     <div>
-      <textarea pInputTextarea [(ngModel)]="note" placeholder="Optional Note" class="consistent-field" [autoResize]="true"></textarea>
+      <textarea pInputTextarea [(ngModel)]="note" placeholder="Optional Note" class="consistent-field" [rows]="3"></textarea>
     </div>
   </div>
   
