Reorder table columns, move refresh for mobile, switch to temp files for upload to better handle larger size on the Pi

--- a/src/app/datatable/datatable.component.css
+++ b/src/app/datatable/datatable.component.css
@@ -26,6 +26,13 @@
   max-width: var(--standard-field-width);
 }
 
+.floating-refresh {
+  position: absolute;
+  bottom: 5px;
+  left: 0;
+  z-index: 2;
+}
+
 .thing-table {
   min-width: 50rem;
   --updated-col-width: 80px;
