--- a/src/app/datatable/datatable.component.html
+++ b/src/app/datatable/datatable.component.html
@@ -28,7 +28,7 @@
         }
         <p-button (onClick)="clearSelectedRows(); manageTemplate.show()" icon="pi pi-list" [label]="getManageTemplateLabel()" />
         <p-button (onClick)="clearSelectedRows(); manageThing.showAdd()" icon="pi pi-plus-circle" label="New Thing" />
-        <p-button (onClick)="requestEditSelected()" icon="pi pi-pencil" label="Edit Thing" [disabled]="!hasSelectedRows()" />
+        <p-button (onClick)="requestEditSelected()" icon="pi pi-pencil" label="Edit/View Thing" [disabled]="!hasSelectedRows()" />
         <p-button (onClick)="confirmDeleteSelected($event)" icon="pi pi-trash" severity="danger" [label]="getDeleteLabel()" [disabled]="!hasSelectedRows()" />
       </div>
       <div class="toolbar-right">
@@ -80,17 +80,10 @@
          >
   <ng-template pTemplate="header">
     <tr>
-      <th pSortableColumn="updated" class="updated-col center" pTooltip="Last Updated">
-        @if (useDial) {
-          <span class="pi pi-refresh header-refresh" (click)="refreshThings()" pTooltip="Refresh">&nbsp;</span>
-        }
-        <p-sortIcon field="updated" class="updated-col-sort"/>
-      </th>
       <th pSortableColumn="name" class="name-col">
         {{ getNameColumnHeader() }} <p-sortIcon field="name" />
       </th>
       <th pSortableColumn="templateType" class="type-col">Type <p-sortIcon field="templateType" /></th>
-      <th pSortableColumn="time" class="time-col">Date <p-sortIcon field="time" /></th>
       <th pSortableColumn="fieldsAsString" class="fields-col">
         Fields
         <p-sortIcon field="fields" />
@@ -122,24 +115,25 @@
           <span class="pi pi-filter-slash header-tiny-button header-tiny-button-color" (click)="toggleShowFilters()" pTooltip="Hide Filters"></span>
         }
       </th>
+      <th pSortableColumn="time" class="time-col">Date <p-sortIcon field="time" /></th>
+      <th pSortableColumn="updated" class="updated-col center" pTooltip="Last Updated">
+        <p-sortIcon field="updated" class="updated-col-sort"/>
+      </th>
     </tr>
     @if (showFilters) {
       <tr>
-        <th colspan="2"><p-columnFilter type="text" field="name" matchMode="contains" /></th>
+        <th><p-columnFilter type="text" field="name" matchMode="contains" /></th>
         <th><p-columnFilter type="text" field="templateType" matchMode="contains" /></th>
         <!-- TODO Could add a custom filter option of "Reminder=true/false" for the time column. Then can remove 'reminder' from supported global search fields on the table -->
-        <th><p-columnFilter type="date" field="time" appendTo="body" /></th>
         <th colspan="3">
           <input pInputText type="text" (change)="filterFields($event)" class="header-filter-field" />
         </th>
+        <th colspan="2"><p-columnFilter type="date" field="time" appendTo="body" /></th>
       </tr>
     }
   </ng-template>
   <ng-template pTemplate="body" let-data let-rowIndex="rowIndex">
     <tr [pSelectableRow]="data" [pSelectableRowIndex]="rowIndex" (touchstart)="rowTouchStart(data)" (touchend)="rowTouchEnd(data)">
-      <td class="updated-col-cell" pTooltip="{{data.updated | date: 'medium'}}">
-        {{ data.getUpdated() }}
-      </td>
       <td>
         <span [style]="'color:' + data.color">
           @if (isFavoriteByName(data.name)) {
@@ -162,6 +156,9 @@
           }
         </span>
       </td>
+      <td colspan="3" (click)="quickviewFields(data, $event)" [class]="data.hasFieldsAsString() ? 'quickview-zoom' : ''">
+        <div class="fields-scroller" [innerHTML]="data.fieldsAsString"></div>
+      </td>
       <td class="time-col-td">
         <span [style]="'color:' + data.color" [pTooltip]="'Day of week: ' + (data.time | date: 'EEEE')">
           {{ data.time | date: 'MMM dd/yy hh:mm a' }}
@@ -172,8 +169,8 @@
           }
         </span>
       </td>
-      <td colspan="3" (click)="quickviewFields(data, $event)" [class]="data.hasFieldsAsString() ? 'quickview-zoom' : ''">
-        <div class="fields-scroller" [innerHTML]="data.fieldsAsString"></div>
+      <td class="updated-col-cell" pTooltip="{{data.updated | date: 'medium'}}">
+        {{ data.getUpdated() }}
       </td>
     </tr>
   </ng-template>
@@ -188,6 +185,9 @@
     </ng-template>
   }
 </p-table>
+@if (useDial) {
+  <span class="pi pi-refresh floating-refresh" (click)="refreshThings()" pTooltip="Refresh">&nbsp;</span>
+}
 }
 
 @if (!things.loadedAndHasData()) {
